added test for a table with multiple inputs and outputs